force-app/main/default/objects/Receiving__c/Receiving__c.object-meta.xml
<CustomObject>
    <description>Receiving Custom Object</description>
    <label>Receiving</label>
    <nameField>
        <displayFormat>REC-{0000000000}</displayFormat>
        <label>Receiving ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receivings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>