force-app/main/default/objects/Receiving__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <errorMessage>Please select Product PO number.</errorMessage>
        <filterItems>
            <field>Purchase_Order__c.PO_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filterItems>
        <filterItems>
            <field>Purchase_Order__c.PO_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filterItems>
        <filterItems>
            <field>Purchase_Order__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Product</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Receivings</relationshipLabel>
    <relationshipName>Receivings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>