force-app/main/default/objects/Receiving__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Receivings</relationshipLabel>
    <relationshipName>Receivings</relationshipName>
    <type>Lookup</type>
</CustomField>