force-app/main/default/objects/Receiving__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <formula>Purchase_Order__r.Supplier_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>