force-app/main/default/objects/Receiving__c/listViews/All_Product_Receipts.listView-meta.xml
<ListView>
    <fullName>All_Product_Receipts</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Ownership__c</columns>
    <columns>Site__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Product Receipts</label>
</ListView>