force-app/main/default/objects/Receiving__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Ownership__c</columns>
    <columns>Site__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>